--- a/BlindSwordmaster/blindswordmaster/src/main/res/layout/duel_screen.xml
+++ b/BlindSwordmaster/blindswordmaster/src/main/res/layout/duel_screen.xml
@@ -13,7 +13,7 @@
 	        android:layout_gravity="center"
 	        android:src="@drawable/swordlogo" />
     
-	    <ImageView
+	    <ImageButton
 	        android:id="@+id/forward_arrow"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
@@ -27,7 +27,7 @@
 	        android:layout_marginTop="14dp"
 	        android:layout_gravity="center"
 	        android:src="@drawable/sword" />
-	    	    <ImageView
+	    	    <ImageButton
 	        android:id="@+id/back_arrow"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
